tests/fixtures/fail/returned_borrow_missing_region.sali
let bad(borrow value: i32): borrow i32 = borrow value
let main(): i32 = 42
